--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,87 @@
+/* FONTS  */
+@import url('https://fonts.googleapis.com/css?family=Acme|Bitter');
+
+/* MAIN HTML TAGS */
+
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  width: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'Bitter', serif;
+  color: #000;
+  background-color: #000;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+h2 {
+  border: 2px solid #dbd;
+  border-radius: 5px;
+  padding: 5px;
+  text-align: center;
 }
+
+li {
+  list-style-type: none;
+  font-size: 1.5rem;
+  margin: 0;
+  padding: 0;
+  margin-top: 40px;
+  padding-top: 10px;
+  padding-left: 20px;
+  width: 500px;
+  height: 36px;
+  border-bottom: 2px solid #dbd;
+  border-top: 2px solid #dbd;
+  border-left: 2px solid #dbd;
+  border-bottom-left-radius: 20px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  height: 100px;
+  justify-content: space-around;
+}
+
+label {
+  width: 250px;
+  border: 2px solid #dbd;
+  border-radius: 5px;
+  padding: 5px;
+  text-align: center;
+}
+
+input {
+  background-color: #fef;
+  color: black;
+  border: 2px solid #dbd;
+  border-radius: 5px;
+  font-family: 'Bitter', serif;
+  height: 20px;
+  width: 260px;
+}
+
+/* ID TAGS */
+
+#list-wrap {
+  display: flex;
+  align-items: right;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+#main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  width: 80%;
+  height: 100%;
+  box-shadow: 5px 10px 20px #979;
+  border-radius: 5px;
+  background-color: #fdf;
+}
+
+/* CLASS TAGS */
